Improvements made. Project is not ready